@@ -1,4 +1,4 @@
-Slurp! v0.4
+Slurp! v0.5
 Slurp! is a URL shortener and file upload service. It is installable pretty much anywhere that wordpress is.
 Slurp! uses PHPMailer to send emails.
 
@@ -6,6 +6,7 @@ Update (04 Jan '10): Slurp! now prompts for mail settings during setup.
 Update (28 Nov '09): Slurp! now has a bulk-download facility accessabile within the file listing search facility. This uses the ZipFile compression class found here: http://www.devco.net/archives/2005/05/24/creating_zip_files_with_php.php
 Update (16 Nov '09): Slurp! now includes an upgrader, which suddenly became necessary after adding a new feature altered the tables and fields Slurp needed to operate.
 Update (24 Oct '09): Slurp! now includes an installer to do initial configuration.
+Update (25 Aug '10): Slurp! now has its own API, which currently only handles authenticated uploads (Currently written to handle all file uploads as PNG-encoded screenshots).
 
 Known bugs:
 None
